--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<script src="js/yinyue.js"></script>
 </head>
 <body>
-	<audio id="audio" src="media/绅士.mp3" controls></audio>
+	<audio id="audio" src="media/绅士.mp3"></audio>
 
 	<div class="player">
 		<div class="player-top">
