--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 			</div>
 			<div class="tupianright">
 				<div class="geming">
-					<div class="geming1">qq音乐</div>
+					<div class="geming1">优乐音乐</div>
 					<div class="danqu"></div>
 				</div>
 				<div class="gexing">听我想听的歌</div>
@@ -80,5 +80,8 @@
 			</div>
 		</div>
 	</div>
+
+	<div class="icon"></div>
+	<div class="youle">优乐音乐</div>
 </body>
 </html>
